# Modelado-Simulaci-n-PRACTICA3

./: README.md
media/: plot_results.py
media/Arbol-Transformadas/: arbol_transformadas_info.gv
media/p3_pick_place_metadata/: metadata.yaml
media/p3_pick_place_plots/: datos_imu.csv
src/rover_description/: CMakeLists.txt  package.xml  robot_Practica2.urdf
src/rover_description/config/: bridge.yaml  rover_controllers.yaml
src/rover_description/launch/: robot.launch.py  robot_controllers.launch.py  robot_state_publisher.launch.py
src/rover_description/meshes/dae/: Cube.001.dae  Cube.005.dae  Cube.008.dae  Cube.009.dae  Cylinder.001.dae  Cylinder.002.dae  Cylinder.003.dae  Cylinder.004.dae  Cylinder.dae  Torus.001.dae  Torus.002.dae  Torus.003.dae  Torus.004.dae  Torus.005.dae  Torus.dae  base_real_final.dae
src/rover_description/robots/: robot.urdf.xacro
src/rover_description/rviz/: robot.rviz
src/rover_description/scripts/: cmd_vel_to_stamped.py  record_analysis.py
src/rover_description/urdf/arm/: gripper.urdf.xacro  scara.urdf.xacro
src/rover_description/urdf/base/: robot_base.urdf.xacro
src/rover_description/urdf/sensors/: camera.urdf.xacro  imu_sensor.urdf.xacro  sensors.urdf.xacro
src/rover_description/urdf/utils/: utils.urdf.xacro
src/rover_description/urdf/wheels/: rover_wheel.urdf.xacro
src/rover_moveit_config/: .setup_assistant  package.xml
src/rover_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  robot_Practica2.ros2_control.xacro  robot_Practica2.srdf  robot_Practica2.urdf.xacro  ros2_controllers.yaml
src/rover_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
