<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rover_description</name>
    <version>0.0.1</version>
    <description>Paquete de descripción ROS 2 del robot de la Práctica 3</description>

    <maintainer email="j.sanmiguel.2023@alumnos.urjc.es">Juan San Miguel</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Ejecución básica -->
    <exec_depend>xacro</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>ament_index_python</exec_depend>
    <exec_depend>ros2_control</exec_depend>
    <exec_depend>ros2_controllers</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>gz_ros2_control</exec_depend>
    <exec_depend>diff_drive_controller</exec_depend>
    <exec_depend>joint_state_broadcaster</exec_depend>
    <exec_depend>joint_trajectory_controller</exec_depend>

    <!-- Simulación -->
    <exec_depend>ros_gz_bridge</exec_depend>
    <exec_depend>ros_gz_sim</exec_depend>
    <exec_depend>urjc_excavation_world</exec_depend>

    <!-- MoveIt -->
    <exec_depend>rover_moveit_config</exec_depend>

    <!-- Si usas tu script cmd_vel_to_stamped.py -->
    <exec_depend>rclpy</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>

    <!-- Mensajes usados por el bridge -->
    <exec_depend>rosgraph_msgs</exec_depend>
    <exec_depend>tf2_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>